// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Separator renders with className 1`] = `
<div
  className="separator className"
>
  <hr />
</div>
`;

exports[`Separator renders without className 1`] = `
<div
  className="separator"
>
  <hr />
</div>
`;
